--- a/main.css
+++ b/main.css
@@ -1,48 +1,162 @@
+@charset "UTF-8";
 * {
-    box-sizing: border-box;
-}
+    margin: 0;
+    padding: 0;
+    border: 0; }
+
+body {
+    padding-top: 100px;
+    background: #000;
+    -moz-user-select: none;
+    /*火狐*/
+    -webkit-user-select: none;
+    /*webkit浏览器*/
+    -ms-user-select: none;
+    /*IE10*/
+    -khtml-user-select: none;
+    /*早期浏览器*/
+    user-select: none; }
 
 .wrapper {
     width: 800px;
-    height: 600px;
-    border: 1px solid #ccc;
-}
-
-.control-box {
-    height: 50px;
-    line-height: 50px;
-    font-size: 24px;
-}
-
-.score, .level, .disorder, .count-down {
-    width: 180px;
-    display: inline-block;
-}
-
-.score {
-
-}
-
-.title {
-
-}
-
-.game-box {
-    width: 800px;
-    position: relative;
+    height: 660px;
+    /*border: 1px solid #ccc;*/
     margin: 0 auto;
-}
-
-.game-box .game-row {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-}
-
-.game-box .game-row img {
+    position: relative;
+    background: url("images/game-bg.png") center no-repeat;
+    background-size: cover; }
+.wrapper .init-box {
+    width: 100%;
+    height: 100%;
+    background: url("images/start-cover.png") center no-repeat;
+    background-size: cover;
+    position: relative; }
+.wrapper .init-box .start-btn {
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    width: 149px;
+    height: 208px;
+    bottom: 30px;
+    cursor: pointer; }
+.wrapper .game-box {
+    width: 100%;
+    position: relative; }
+.wrapper .game-box .toolbar {
+    width: 100%;
+    height: 92px;
+    line-height: 92px;
+    font-size: 24px;
+    background: url("images/toolbar3.png") center no-repeat;
+    background-size: cover;
+    position: relative; }
+.wrapper .game-box .toolbar .time {
+    position: absolute;
+    left: 110px;
+    top: 15px;
+    line-height: 34px; }
+.wrapper .game-box .toolbar .level {
+    position: absolute;
+    height: 34px;
+    left: 294px;
+    top: 12px;
+    line-height: 34px; }
+.wrapper .game-box .toolbar .level img {
+    height: 34px; }
+.wrapper .game-box .toolbar .disorder {
+    width: 120px;
+    height: 84px;
+    position: absolute;
+    left: 341px;
+    cursor: pointer; }
+.wrapper .game-box .toolbar .disorder img {
+    position: absolute;
+    right: 0;
+    top: 40px; }
+.wrapper .game-box .toolbar .scoring {
+    width: 251px;
+    height: 34px;
+    line-height: 34px;
+    position: absolute;
+    left: 530px;
+    top: 15px;
+    cursor: pointer; }
+.wrapper .game-box .toolbar .scoring img {
+    height: 34px; }
+.wrapper .game-box .game-area {
+    position: relative; }
+.wrapper .game-box .game-area table#game {
+    border-collapse: collapse;
+    border-spacing: 0; }
+.wrapper .game-box .game-area table#game .game-row {
+    height: 80px; }
+.wrapper .game-box .game-area table#game .game-row td {
+    width: 80px;
+    height: 80px;
+    text-align: center;
+    vertical-align: middle; }
+.wrapper .game-box .game-area table#game .game-row td .pic-box {
+    display: inline-block;
     cursor: pointer;
-}
+    width: 64px;
+    height: 64px;
+    line-height: 64px;
+    background: url("images/pic-bg.png") center no-repeat;
+    background-size: contain; }
+.wrapper .game-box .game-area table#game .game-row td .pic-box.active {
+    width: 80px;
+    height: 80px;
+    background: url(images/active.png) center no-repeat;
+    background-size: 124%;
+    border-radius: 16px; }
+.wrapper .game-box .game-area table#game .game-row td .pic-box img {
+    vertical-align: middle; }
+.wrapper .game-box .game-area #canvas {
+    position: absolute;
+    width: 800px;
+    top: 0;
+    height: 560px; }
+.wrapper .game-over {
+    width: 800px;
+    height: 660px;
+    position: absolute;
+    top: 0;
+    background: rgba(0, 0, 0, 0.4) url(images/game-over.png) center no-repeat;
+    background-size: auto; }
+.wrapper .game-over .current-score {
+    position: absolute;
+    width: 350px;
+    height: 60px;
+    top: 320px;
+    left: 241px;
+    text-align: center; }
+.wrapper .game-over .history-score {
+    color: #999;
+    position: absolute;
+    width: 200px;
+    height: 30px;
+    top: 436px;
+    left: 411px;
+    font-size: 20px; }
+.wrapper .game-over .replay-btn {
+    position: absolute;
+    width: 200px;
+    height: 30px;
+    top: 396px;
+    left: 300px;
+    cursor: pointer; }
 
 .empty {
-    opacity: 0;
-}
+    opacity: 0; }
+
+.hidden {
+    display: none; }
+
+.number {
+    display: inline-block;
+    background-size: contain;
+    height: 34px;
+    width: 34px; }
+
+/*# sourceMappingURL=index.css.map */
